--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <button class="dice-img">
+    <button class="dice-img" id="dice">
       <img src="./images/icon-dice.svg" alt="dice-img" class="dice" />
     </button>
     <!-- Custom JavaScript -->
